# backend/src/main/java/com/github/marcelorodrigo/dutytracker/usecase/response/incident/OvertimeCalculationStatus.java
@@ -1,0 +1,6 @@
+package com.github.marcelorodrigo.dutytracker.usecase.response.incident;
+
+public enum OvertimeCalculationStatus {
+    OVERTIME_CALCULATED,
+    NO_OVERTIME
+}
